bdr.BDR.scala.error
Erreur de compilation :
BDR:4: error: not found: value litmessage
    var message = litmessage()
                  ^